force-app/main/default/objects/Opportunity_ActivityHistory__c/Opportunity_ActivityHistory__c.object-meta.xml
<CustomObject>
    <description>사업기회 액티비티가 완료될때마다 기록을 남기는 오브젝트</description>
    <label>Opportunity Activity History</label>
    <nameField>
        <displayFormat>OAH-{YY}{MM}{DD}{00000}</displayFormat>
        <label>Opportunity Activity History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Activity History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>