force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Opportunity Activity가 완료될 당시의 End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>