force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/MasterOpptyStage_Code__c.field-meta.xml
<CustomField>
    <fullName>MasterOpptyStage_Code__c</fullName>
    <description>Opportunity Activity가 완료될때 Activity가 속한 Stage의 Code값</description>
    <label>Master Opportunity Stage (Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>