force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/MasterOpptyStage_Label__c.field-meta.xml
<CustomField>
    <fullName>MasterOpptyStage_Label__c</fullName>
    <description>Opportunity Activity가 완료될 당시 해당 Activity가 속해있던 Stage의 Label값</description>
    <label>Master Opportunity Stage (Label)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>