force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/Opportunity_Activity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Activity가 완료될때 해당 Activity의 Id</description>
    <label>Opportunity Activity</label>
    <referenceTo>Opportunity_Activity__c</referenceTo>
    <relationshipLabel>Opportunity Activity History</relationshipLabel>
    <relationshipName>Opportunity_Activity_History</relationshipName>
    <type>Lookup</type>
</CustomField>