force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/OpptyStage_Code__c.field-meta.xml
<CustomField>
    <fullName>OpptyStage_Code__c</fullName>
    <description>Opportunity Activity가 완료될때 Oppty Stage의 Code값</description>
    <label>Opportunity Stage (Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>