force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/OpptyStage_Label__c.field-meta.xml
<CustomField>
    <fullName>OpptyStage_Label__c</fullName>
    <description>Opportunity Activity가 완료될 당시 Oppty Stage의 Label값</description>
    <label>Opportunity Stage (Label)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>