force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Opportunity Activity가 완료될 당시의 Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>