force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/TransactionName_Code__c.field-meta.xml
<CustomField>
    <fullName>TransactionName_Code__c</fullName>
    <description>Opportunity Activity가 완료될때 Activity의 Transaction Name의 Code값</description>
    <label>Activity Name (Code)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>