force-app/main/default/objects/Opportunity_ActivityHistory__c/fields/TransactionName_Label__c.field-meta.xml
<CustomField>
    <fullName>TransactionName_Label__c</fullName>
    <description>Opportunity Activity가 완료될때 Activity의 Transaction Name의 Label값</description>
    <label>Activity Name (Label)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>